# ics-adapter

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yaml
src/: main.rs
