[package]
name = "ics-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["native-tls-vendored"] }
anyhow = "1"
icalendar = { version = "0.15", features = ["chrono-tz"] }
serde = { version = "1.0", features = ["derive"] }
urlencoding = "2"
chrono = "0"
rrule = "0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
